scripts/nullness/original/urlaa051fbd3d_WheezePuppet_collegeDiversity_tgz-pJ8-edu_umw_cpsc_collegediversity_SimJ8.txt
../original/urlaa051fbd3d_WheezePuppet_collegeDiversity_tgz-pJ8-edu_umw_cpsc_collegediversity_SimJ8/src/edu/umw/cpsc/collegediversity/Dorm.java:39: error: [assignment] incompatible types in assignment.
            rooms[i]= new Room(this, i, femaleOnly);
                      ^
  found   : @UnderInitialization(edu.umw.cpsc.collegediversity.Room.class) @NonNull Room
  required: @Initialized @NonNull Room
../original/urlaa051fbd3d_WheezePuppet_collegeDiversity_tgz-pJ8-edu_umw_cpsc_collegediversity_SimJ8/src/edu/umw/cpsc/collegediversity/Dorm.java:39: error: [argument] incompatible argument for parameter dorm of Room constructor.
            rooms[i]= new Room(this, i, femaleOnly);
                               ^
  found   : @UnderInitialization(edu.umw.cpsc.collegediversity.Dorm.class) @NonNull Dorm
  required: @Initialized @NonNull Dorm
../original/urlaa051fbd3d_WheezePuppet_collegeDiversity_tgz-pJ8-edu_umw_cpsc_collegediversity_SimJ8/src/edu/umw/cpsc/collegediversity/Group.java:40: error: [return] incompatible types in return.
        return members.get(s);
                          ^
  type of expression: @Initialized @Nullable Membership
  method return type: @Initialized @NonNull Membership
../original/urlaa051fbd3d_WheezePuppet_collegeDiversity_tgz-pJ8-edu_umw_cpsc_collegediversity_SimJ8/src/edu/umw/cpsc/collegediversity/Group.java:48: error: [return] incompatible types in return.
        return members.keys();
                           ^
  type of expression: Enumeration<@KeyFor("this.members") Student>
  method return type: Enumeration<Student>
../original/urlaa051fbd3d_WheezePuppet_collegeDiversity_tgz-pJ8-edu_umw_cpsc_collegediversity_SimJ8/src/edu/umw/cpsc/collegediversity/Group.java:91: error: [argument] incompatible argument for parameter key of Hashtable.remove.
            members.remove(s);
                           ^
  found   : @Initialized @Nullable Student
  required: @Initialized @NonNull Object
../original/urlaa051fbd3d_WheezePuppet_collegeDiversity_tgz-pJ8-edu_umw_cpsc_collegediversity_SimJ8/src/edu/umw/cpsc/collegediversity/Student.java:67: error: [initialization.fields.uninitialized] the constructor does not initialize fields: dormRoom
    Student(Gender gender, int grade, double gpa, Race race){
    ^
../original/urlaa051fbd3d_WheezePuppet_collegeDiversity_tgz-pJ8-edu_umw_cpsc_collegediversity_SimJ8/src/edu/umw/cpsc/collegediversity/Student.java:235: error: [argument] incompatible argument for parameter s2 of Student.encounter.
                    encounter(s);
                              ^
  found   : @Initialized @Nullable Student
  required: @Initialized @NonNull Student
../original/urlaa051fbd3d_WheezePuppet_collegeDiversity_tgz-pJ8-edu_umw_cpsc_collegediversity_SimJ8/src/edu/umw/cpsc/collegediversity/Student.java:368: error: [assignment] incompatible types in assignment.
        dormRoom=null;
                 ^
  found   : null (NullType)
  required: @Initialized @NonNull Room
../original/urlaa051fbd3d_WheezePuppet_collegeDiversity_tgz-pJ8-edu_umw_cpsc_collegediversity_SimJ8/src/edu/umw/cpsc/collegediversity/Sim.java:146: error: [initialization.static.field.uninitialized] static field theInstance not initialized
    private static Sim theInstance;
                       ^
../original/urlaa051fbd3d_WheezePuppet_collegeDiversity_tgz-pJ8-edu_umw_cpsc_collegediversity_SimJ8/src/edu/umw/cpsc/collegediversity/Sim.java:233: error: [dereference.of.nullable] dereference of possibly-null reference outputFiles
            for (int i=0; i<outputFiles.length; i++) {  
                            ^
../original/urlaa051fbd3d_WheezePuppet_collegeDiversity_tgz-pJ8-edu_umw_cpsc_collegediversity_SimJ8/src/edu/umw/cpsc/collegediversity/FreshmanHousingSelection.java:14: error: [initialization.static.field.uninitialized] static field theInstance not initialized
    private static FreshmanHousingSelection theInstance;
                                            ^
../original/urlaa051fbd3d_WheezePuppet_collegeDiversity_tgz-pJ8-edu_umw_cpsc_collegediversity_SimJ8/src/edu/umw/cpsc/collegediversity/StatsPrinter.java:15: error: [initialization.static.field.uninitialized] static field theInstance not initialized
    private static StatsPrinter theInstance;
                                ^
../original/urlaa051fbd3d_WheezePuppet_collegeDiversity_tgz-pJ8-edu_umw_cpsc_collegediversity_SimJ8/src/edu/umw/cpsc/collegediversity/UpperclassHousingSelection.java:17: error: [initialization.static.field.uninitialized] static field theInstance not initialized
    private static UpperclassHousingSelection theInstance;
                                              ^
../original/urlaa051fbd3d_WheezePuppet_collegeDiversity_tgz-pJ8-edu_umw_cpsc_collegediversity_SimJ8/src/edu/umw/cpsc/collegediversity/FreshmanFactory.java:16: error: [initialization.static.field.uninitialized] static field factory not initialized
    private static FreshmanFactory factory;
                                   ^
14 errors
